add basic layout, style

--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Silkscreen' rel='stylesheet'>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="index.js" ></script>
 </head>
 <body>
   <h1>Blake's Website</h1>
+  <h2>Projects</h2>
+  <div id="tile-insertion-point" class="flx"></div>
+  <h2>Technologies</h2>
+  <div class="tech-container flx c">
+    <div class="flxd c tech">
+        <h3><span class="tech-title"> &#20 Front End &#20 </span></h3>
+        <p>React</p>
+        <p>Redux</p>
+        <p>Bootstrap</p>
+        <p>HTML & CSS</p>
+    </div>
+    <div class="flxd c tech">
+        <h3><span class="tech-title"> &#20 Back End &#20 </span></h3>
+        <p> Server: Node, Express.js</p>
+        <p> Database: Postgres, MongoDB</p>
+    </div>
+    <div class="flxd c tech">
+        <h3><span class="tech-title"> &#20 Tools &#20  </span></h3>
+        <p> Git </p>
+        <p> Webpack + Babel</p>
+    </div>
+    <div class="flxd c tech">
+        <h3><span class="tech-title"> &#20 Languages &#20 </span></h3>
+        <p> Python </p>
+        <p> Javscript </p>
+    </div>
+  </div>
+  <h2>Contact</h2>
+  <p class="contact-info">📧: blakebequette@gmail.com</p>
 </body>
 </html>
