fix coffee files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script defer src="index.js" ></script>
 </head>
 <body>
-  <h1>Blake's Website</h1>
+  <h1>Blake's Home Page </h1>
   <h2>Projects</h2>
   <div id="tile-insertion-point" class="flx"></div>
   <h2>Technologies</h2>
