add leaflet aroumd the world tile

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
   <h2>Technologies</h2>
   <div class="tech-container flx c">
     <div class="flxd c tech">
-        <h3><span class="tech-title"> &#20 Front End &#20 </span></h3>
+        <h3><span class="tech-title">Front End</span></h3>
         <p>React</p>
         <p>Redux</p>
         <p>Bootstrap</p>
         <p>HTML & CSS</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title"> &#20 Back End &#20 </span></h3>
+        <h3><span class="tech-title"> Back End </span></h3>
         <p> Server: Node, Express.js</p>
         <p> Database: Postgres, MongoDB</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title"> &#20 Tools &#20  </span></h3>
+        <h3><span class="tech-title">  Tools  </span></h3>
         <p> Git </p>
         <p> Webpack + Babel</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title"> &#20 Languages &#20 </span></h3>
+        <h3><span class="tech-title">Languages</span></h3>
         <p> Python </p>
         <p> Javscript </p>
     </div>
