add campus manager, new photo url

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
   <h1>Blake's Home Page </h1>
+  <!-- <div class="golden-ratio" id="decor-1"></div>
+  <div class="golden-ratio" id="decor-2"></div>
+  <div class="golden-ratio" id="decor-3"></div> -->
   <h2>Projects</h2>
   <div id="tile-insertion-point" class="flx"></div>
   <h2>Technologies</h2>
