mess with themes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Blake Homepage</title>
+  <title>Blake's Homepage</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Silkscreen' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Fauna+One">
+  <link href='https://fonts.googleapis.com/css?family=Bai Jamjuree' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Saira' rel='stylesheet'>
   <link rel="stylesheet" href="style.css" />
   <script defer src="index.js" ></script>
 </head>
@@ -28,13 +32,16 @@
     </div>
     <div class="flxd c tech">
         <h3><span class="tech-title"> Back End </span></h3>
-        <p> Server: Node, Express.js</p>
-        <p> Database: Postgres, MongoDB</p>
+        <p> Node.js</p>
+        <p> Express.js</p>
+        <p> Postgres </p>
+        <p> MongoDB</p>
     </div>
     <div class="flxd c tech">
         <h3><span class="tech-title">  Tools  </span></h3>
         <p> Git </p>
         <p> Webpack + Babel</p>
+        <p> Docker</p>
     </div>
     <div class="flxd c tech">
         <h3><span class="tech-title">Languages</span></h3>
