--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <link href='https://fonts.googleapis.com/css?family=Bai Jamjuree' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Saira' rel='stylesheet'>
   <link rel="stylesheet" href="style.css" />
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png"> -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon.ico">
+  <!-- <link rel="manifest" href="/site.webmanifest"> -->
   <script defer src="index.js" ></script>
 </head>
 <body>
