--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script defer src="index.js" ></script>
 </head>
 <body>
-  <h1>Blake's Home Page </h1>
+  <h1>Blake Bequette </h1>
   <!-- <div class="golden-ratio" id="decor-1"></div>
   <div class="golden-ratio" id="decor-2"></div>
   <div class="golden-ratio" id="decor-3"></div> -->
@@ -28,27 +28,27 @@
   <h2>Technologies</h2>
   <div class="tech-container flx c">
     <div class="flxd c tech">
-        <h3><span class="tech-title">Front End</span></h3>
+        <h3><span class="tech-title">FRONT END</span></h3>
         <p>React</p>
         <p>Redux</p>
         <p>Bootstrap</p>
         <p>HTML & CSS</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title"> Back End </span></h3>
+        <h3><span class="tech-title"> BACK END </span></h3>
         <p> Node.js</p>
         <p> Express.js</p>
         <p> Postgres </p>
         <p> MongoDB</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title">  Tools  </span></h3>
+        <h3><span class="tech-title">  TOOLS  </span></h3>
         <p> Git </p>
         <p> Webpack + Babel</p>
         <p> Docker</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title">Languages</span></h3>
+        <h3><span class="tech-title">LANGUAGES</span></h3>
         <p> Python </p>
         <p> Javscript </p>
     </div>
