other design changes (rachel)

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <p> MongoDB</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title">  TOOLS  </span></h3>
+        <h3><span class="">  TOOLS  </span></h2>
         <p> Git </p>
         <p> Webpack + Babel</p>
         <p> Docker</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title">LANGUAGES</span></h3>
+        <h3><span class="">LANGUAGES</span></h3>
         <p> Python </p>
         <p> Javscript </p>
     </div>
