tentative font changes

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         <p>HTML & CSS</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title"> BACK END </span></h3>
+        <h3><span class="tech-title blk"> BACK END </span></h3>
         <p> Node.js</p>
         <p> Express.js</p>
         <p> Postgres </p>
         <p> MongoDB</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="">  TOOLS  </span></h2>
+        <h3><span class="blk">  TOOLS  </span></h2>
         <p> Git </p>
         <p> Webpack + Babel</p>
         <p> Docker</p>
