--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
   <h2>Technologies</h2>
   <div class="tech-container flx c">
     <div class="flxd c tech">
-        <h3><span class="tech-title">FRONT END</span></h3>
+        <h3><span class="tech-title">Front End</span></h3>
         <p>React</p>
         <p>Redux</p>
         <p>Bootstrap</p>
         <p>HTML & CSS</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="tech-title blk"> BACK END </span></h3>
+        <h3><span class="tech-title"> Back End </span></h3>
         <p> Node.js</p>
         <p> Express.js</p>
         <p> Postgres </p>
         <p> MongoDB</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="blk">  TOOLS  </span></h2>
+        <h3><span class="tech-title">  Tools  </span></h2>
         <p> Git </p>
         <p> Webpack + Babel</p>
         <p> Docker</p>
     </div>
     <div class="flxd c tech">
-        <h3><span class="">LANGUAGES</span></h3>
+        <h3><span class="tech-title">Languages</span></h3>
         <p> Python </p>
-        <p> Javscript </p>
+        <p> Javascript </p>
     </div>
   </div>
   <h2>Contact</h2>
