add favicons to projects

--- a/projects/coffeeClicker/index.html
+++ b/projects/coffeeClicker/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
   <title>Coffee Clicker</title>
 </head>
 
