--- a/projects/whackAMole/index.html
+++ b/projects/whackAMole/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Whack-a-mole</title>
   <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="mallet.png">
   <script src="index.js" defer></script>
 </head>
 <body> 
