--- a/projects/mapfun/index.html
+++ b/projects/mapfun/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
      crossorigin=""></script>
+     <link rel="icon" type="image/png" sizes="16x16" href="world.png">
     
      <script src="bundle.js" defer></script>
   </head>
