--- a/projects/jsonViewer/index.html
+++ b/projects/jsonViewer/index.html
@@ -7,12 +7,13 @@
   <meta name="description" content="" />
   <link rel="stylesheet" href="style.css" />
   <link href='https://fonts.googleapis.com/css?family=Galada' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet'>
   
   <link rel="icon" type="image/x-icon" href="faviconn.png">
   <script src="bundle.js" defer></script>
 </head>
 <body>
-  <h1>JSON VIEWER</h1>
+  <h1>.json  Viewer</h1>
     <div id="root"></div>
 </body>
 </html>
