--- a/projects/tsp/index.html
+++ b/projects/tsp/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Traveling Salesman</title>
-    <link rel="stylesheet" href="style.css" />
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-     crossorigin=""></script>
-     <link rel="shortcut icon" type="image/png" href="briefcase.png">
-     <script src="bundle.js" defer></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <title>Traveling Salesman</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
+  <script defer src="bundle.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+  <link rel="stylesheet" type="text/css" href="./styles.css" />
+  <link rel="icon" href="img/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./aeroplane.png">
+  
+</head>
+<body>
+  <div id="root"></div>
+</body>
 </html>
